shell: displays waiting text and fixes spacing
displays text to inform the user that the transaction may take a while
and also fixes bug which made the cancel button go above the join button

Fixes: #918

--- a/modules/shell/cockpit.css
+++ b/modules/shell/cockpit.css
@@ -815,6 +815,12 @@ a {
     width: 4em;
 }
 
+/* Realms */
+
+#realms-op-wait-message {
+    float: left;
+    margin-top: 3px;
+}
 
 /* System information */
 
